[package]
name = "daisy-field-sine"
version = "0.1.0"
edition = "2021"

[dependencies]
daisy = { version = "0.11.0", features = ["seed"] }
stm32h7xx-hal = { version = "0.16", features = [ "stm32h750v", "rt", "revision_v", "usb_hs", "xspi", "fmc" ] }

cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = [ "device" ] }
libm = "0.2.8"

# For debugging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Add this line for the panic handler
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
