[package]
name = "daisy-field-rust-synth"
version = "0.1.0"
edition = "2021"

[dependencies]
daisy = { version = "0.11.0", features = ["seed"] }

# The sdmmc feature is still needed here
stm32h7xx-hal = { version = "0.16", features = [ "stm32h750v", "rt", "revision_v", "usb_hs", "xspi", "fmc" ] }

cortex-m = "0.7"
libm = "0.2.8"

# For debugging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# For the panic handler
panic-halt = "0.2.0"

# For the oled display
embedded-graphics = "0.8"
display-interface-spi = "0.4"
ssd1306 = "0.8.0"
fugit = "0.3"
ryu = "1.0" # Add for float formatting

# For rem_euclid
micromath = "2.1.0"

# RTIC dependencies
cortex-m-rtic = "1.1.4"
rtt-target = "0.6.1"
systick-monotonic = "1.0.1"

[dependencies.rtic-monotonics]
version = "1.1.0"
features = ["cortex-m-systick"]

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
